# frontend

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  db.json  docker-compose.yml  package.json  statistics.json
.github/ISSUE_TEMPLATE/: suggestion
.ipynb_checkpoints/: recoil_effects_on_reflection_from_relativistic_mirrors_in_laser_plasmas-checkpoint.ipynb
backend/: package.json
express/: Dockerfile  package-lock.json  package.json
express/src/: db.js  index.js
jupyter/: Dockerfile
jupyter/sample-document/: recoil_effects_on_reflection_from_relativistic_mirrors_in_laser_plasmas.html  recoil_effects_on_reflection_from_relativistic_mirrors_in_laser_plasmas.ipynb
jupyter/sdf/: Makefile  cmake_install.cmake  install_manifest.txt
jupyter/sdf/FORTRAN/: CMakeLists.txt  Makefile
jupyter/sdf/FORTRAN/src/: CMakeLists.txt  pack.py  pack.sh  sdf_control.f90  sdf_output_station.f90  sdf_output_station_r4.f90  sdf_output_station_r8.f90  sdf_output_station_ru.f90
jupyterdemo/: Dockerfile  Dockerfile.bcp  Dockerfile.conda  Dockerfile.new
public/: index.html
react/: .env  .gitignore  Dockerfile  README.md  env.bcp  package-lock.json  package.json  searchapi.vim  techniques.txt
react-concurrent-test/: .env  package.json
react-concurrent-test/src/: index.js  serviceWorker.js
react/public/: index.html
react/src/: App.js  App.jsx  GlobalStyle.jsx  index.js  index.jsx  keycloak.js  newTheme.js  serviceWorker.js  serviceWorker.jsx  theme.js
searchapi/: Dockerfile  db.json
src/: App.js  GlobalStyle.jsx  index.js  keycloak.js  serviceWorker.js
src/About/: about.js
src/App/: app.js  errorBoundary.js  helpers.js  mobileNav.js  spinner.js  stores.js  swrProvider.js  useFetch.js  useScrollPos.js  useSearchQuery.js  useSections.js  useSidebar.js  useSidebars.js
src/Dashboard/: dashboard.js
src/Datasets/: dataset.js  dataset.stories.js  datasets.js
src/Document/: document.js  documentPage.js
src/Documents/: document.js  documentsList.js  documentsPage.js
src/Environments/: dataset.js  environment.js  environments.js  spawnEvironment.js
src/Layout/: bottomNav.js  column.js  row.js
src/Navigation/: loginLogoutButton.js  navigation.js
src/Primitives/: Box.js  Button.js  Card.js  Flex.js  Heading.js  Image.js  Link.js  List.js  Text.js  index.js  primitives.js
src/Search/: filtersBase.js  mockTechniques.js  mockfilters.js  new.js  new.js.bcp  new.test.js  oldStore.js  oldparser.js  parameter.js  parser.js  ref.js  search.d.ts  search.js  store.js
src/Theme/: breakpoints.js  colors.js  dark.js  global.js  light.js  theme.js  themeModeContext.js  toggleThemeButton.js
src/components/: AddInstance.js  Commons.js  Datasets.js  Document.js  (+7 more)
(+197 files in other folders)
